chore(ci): изменена ветка с main на master

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy VitePress
 on:
   push:
     branches:
-      - main  # или master, если у тебя мастер
+      - master  # или master, если у тебя мастер
 
 permissions:
   contents: write
