--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "preview": "vitepress preview"
   },
   "devDependencies": {
+    "@types/node": "^24.10.1",
     "markdown-it-mathjax3": "^4",
     "vitepress": "^1.6.4"
   }
